[package]
name = "trace_server"
version = "0.1.0"
authors = ["leocavalcante <lc@leocavalcante.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
harsh = "0.1"
serde_urlencoded = "0.6"
base64 = "0.11"

[[bin]]
name = "hashid"
path = "bin/hashid.rs"